--- a/.github/workflows/xm.yml
+++ b/.github/workflows/xm.yml
@@ -113,6 +113,8 @@ jobs:
             SOC="gk7205v300" TOTALMEM="128M" HARDWARE="IPC_GK7205V300_G5F" DEVID="000699N5" FLASH_SIZE="0x1000000" $RUN
             SOC="gk7205v300" TOTALMEM="128M" HARDWARE="IPC_GK7205V300_G6S" DEVID="000699Q3" FLASH_SIZE="0x1000000" $RUN
 
+            SOC="gk7205v500" TOTALMEM="64M" HARDWARE="IPC_GK7205V500_G5S" DEVID="000889TV" FLASH_SIZE="0x800000" $RUN
+
             SOC="gk7605v100" TOTALMEM="128M" HARDWARE="IPC_GK7605V100_83K50W_S38" DEVID="000669HC" FLASH_SIZE="0x800000" $RUN
             SOC="gk7605v100" TOTALMEM="128M" HARDWARE="IPC_GK7605V100_G5E" DEVID="000829N6" FLASH_SIZE="0x800000" $RUN
 
